Actualización-de-Información-del-Blog

--- a/index.html
+++ b/index.html
@@ -48,42 +48,42 @@
 			<section class="Articles-Catalog">
 				<article class="Article-Content">
 					<figure class="Article-Image">
-						<img src="images/photo-1.jpg" />
+						<img src="images/photo-4.png" />
 					</figure>
-					<div class="Article-Title">Cómo definir un Namespace en C#</div>
+					<div class="Article-Title">Lo que puedes esperar de las charlas Ignite en PlatziConf México 2016</div>
 					<div class="Article-Info">
-						<div class="Article-Author">Juan Castro Lurita</div>
-						<div class="Article-Date">Abril 13 2016</div>
+						<div class="Article-Author">Anna Heim</div>
+						<div class="Article-Date">Septiembre 21 2016</div>
 					</div>
 				</article>
 				<article class="Article-Content">
 					<figure class="Article-Image">
-						<img src="images/photo-1.jpg" />
+						<img src="images/photo-5.jpg" />
 					</figure>
-					<div class="Article-Title">Cómo definir un Namespace en C#</div>
+					<div class="Article-Title">9 cosas que quizás no sabías sobre Freddy Vega</div>
 					<div class="Article-Info">
-						<div class="Article-Author">Juan Castro Lurita</div>
-						<div class="Article-Date">Abril 13 2016</div>
+						<div class="Article-Author">Anna Heim</div>
+						<div class="Article-Date">Septiembre 20 2016</div>
 					</div>
 				</article>
 				<article class="Article-Content">
 					<figure class="Article-Image">
-						<img src="images/photo-1.jpg" />
+						<img src="images/photo-6.jpg" />
 					</figure>
-					<div class="Article-Title">Cómo definir un Namespace en C#</div>
+					<div class="Article-Title">¿Qué es el festival Burning Man?</div>
 					<div class="Article-Info">
-						<div class="Article-Author">Juan Castro Lurita</div>
-						<div class="Article-Date">Abril 13 2016</div>
+						<div class="Article-Author">Christian Van Der Henst</div>
+						<div class="Article-Date">Septiembre 18 2016</div>
 					</div>
 				</article>
 				<article class="Article-Content">
 					<figure class="Article-Image">
-						<img src="images/photo-1.jpg" />
+						<img src="images/photo-7.jpg" />
 					</figure>
-					<div class="Article-Title">Cómo definir un Namespace en C#</div>
+					<div class="Article-Title">Consejos de fotografía por Iván Castro [Vídeo]</div>
 					<div class="Article-Info">
-						<div class="Article-Author">Juan Castro Lurita</div>
-						<div class="Article-Date">Abril 13 2016</div>
+						<div class="Article-Author">Anne Heim</div>
+						<div class="Article-Date">Septiembre 14 2016</div>
 					</div>
 				</article>
 			</section>
