--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<li><a href="">FAQ</a></li>
 					<li><a href="">Horarios</a></li>
 					<li><a href="">Live</a></li>
-					<li><a href="">Inicia Sesión</a></li>
+					<label><a href="" class="Red-Button">Inicia Sesión</a></label>
 				</ul>
 			</nav>
 		</header>
